--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
+* {
+    margin-top: 0;
+    box-sizing: border-box;
+}
+
+  body {
+    height: 260vh;
+    background-image: url('original-background.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+  }
+
+  header {
+    position: fixed;
+    width: 100%;
+  }
+
+  #navbar {
+    padding-top: 50px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    text-align: right;
+    
+  }
+
+  li {
+    list-style-type: none;
+    font-family: "Lora";
+    text-align: right;
+
+  }
+
+  #nav-bar a {
+    text-decoration: none;
+    float: right;
+    display: flex;
+    margin: auto;
+    text-align: center;
+  }
+
+  .logo {
+    font-family: "Lavishly Yours";
+    font-weight: 120px;
+    font-size: 50px;
+  }
+   
+
+
+  
 
